@@ -16,7 +16,7 @@ INCLUDES = -I. -I$(top_srcdir)
 
 noinst_HEADERS = poptint.h system.h
 
-noinst_PROGRAMS = test1 test2 test3
+noinst_PROGRAMS = test1 test2 test3 tdict
 test1_SOURCES = test1.c
 test1_LDFLAGS = 
 test1_LDADD = $(usrlib_LTLIBRARIES)
@@ -26,6 +26,9 @@ test2_LDADD = $(usrlib_LTLIBRARIES)
 test3_SOURCES = test3.c
 test3_LDFLAGS = 
 test3_LDADD = $(usrlib_LTLIBRARIES)
+tdict_SOURCES = tdict.c
+tdict_LDFLAGS = 
+tdict_LDADD = $(usrlib_LTLIBRARIES)
 
 noinst_SCRIPTS = testit.sh
 
